<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/login_relative_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/white" >

    <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" >

        <LinearLayout
                android:id="@+id/login_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/saffron"
                android:padding="2dp" >

            <LinearLayout
                    android:id="@+id/login_table_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/wheat"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="9dp" >

                <LinearLayout
                        android:id="@+id/host_edit_row"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/host_edit_label"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:layout_gravity="left"
                            android:layout_margin="1dp"
                            android:text="@string/host_edit_label"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/wet_asphalt" />

                    <EditText
                            android:id="@+id/host_edit"
                            android:layout_width="0dp"
                            android:layout_height="fill_parent"
                            android:layout_weight="0.6"
                            android:hint="@string/host_edit_hint"
                            android:inputType="textWebEditText"
                            android:padding="1dp"
                            android:singleLine="true"
                            android:text="http://office.terrikon.spb.ru/redmine"
                            android:textAppearance="?android:attr/textAppearanceSmallInverse"
                            android:textColor="@color/wet_asphalt" />

                </LinearLayout>

                <LinearLayout
                        android:id="@+id/login_edit_row"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >


                    <TextView
                            android:id="@+id/login_edit_label"
                            android:layout_width="0dp"
                            android:layout_height="fill_parent"
                            android:layout_gravity="left"
                            android:layout_weight="0.4"
                            android:layout_margin="1dp"
                            android:gravity="left|center_vertical"
                            android:scrollHorizontally="true"
                            android:text="@string/login_edit_label"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/wet_asphalt" />

                    <EditText
                            android:id="@+id/login_edit"
                            android:layout_width="0dp"
                            android:layout_height="fill_parent"
                            android:layout_weight="0.6"
                            android:hint="@string/login_edit_hint"
                            android:inputType="textPersonName"
                            android:text="admin"
                            android:textColor="@color/wet_asphalt"
                            android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                        android:id="@+id/password_edit_row"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/password_edit_label"
                            android:layout_width="0dp"
                            android:layout_height="fill_parent"
                            android:layout_gravity="right|center_vertical"
                            android:layout_margin="1dp"
                            android:layout_weight="0.4"
                            android:text="@string/password_edit_label"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/wet_asphalt" />

                    <EditText
                            android:id="@+id/password_edit"
                            android:layout_width="0dp"
                            android:layout_height="fill_parent"
                            android:layout_margin="1dp"
                            android:layout_weight="0.6"
                            android:hint="@string/password_edit_hint"
                            android:inputType="textPassword"
                            android:maxWidth="140dp"
                            android:minWidth="140dp"
                            android:text=""
                            android:textColor="@color/wet_asphalt"
                            android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                        android:id="@+id/login_button_row"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                    <Button
                            android:id="@+id/login_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:maxWidth="140dp"
                            android:minWidth="140dp"
                            android:text="@string/login_button_text" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>